--- a/app.json
+++ b/app.json
@@ -1,12 +1,45 @@
 {
   "pages":[
+    "pages/my/my",
+    "pages/study/study",
+    "pages/course/course",
     "pages/home/home"
   ],
   "window":{
     "backgroundTextStyle":"light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
+    "navigationBarTitleText": "酷丁鱼课堂",
     "navigationBarTextStyle":"black"
+  },
+  "tabBar":{
+    "color": "#A8A8A8",
+    "selectedColor": "#FF951C",
+    "list":[
+      {
+        "pagePath":"pages/home/home",
+        "text":"首页",
+        "iconPath":"/image/icon_home@2x.png",
+        "selectedIconPath":"/image/icon_home_selected@2x.png"
+      },
+      {
+        "pagePath":"pages/course/course",
+        "text":"课程",
+        "iconPath":"/image/icon_course@2x.png",
+        "selectedIconPath":"/image/icon_course_selected@2x.png"
+      },
+      {
+        "pagePath":"pages/study/study",
+        "text":"课程",
+        "iconPath":"/image/icon_study@2x.png",
+        "selectedIconPath":"/image/icon_study_selected@2x.png"
+      },
+      {
+        "pagePath":"pages/my/my",
+        "text":"课程",
+        "iconPath":"/image/icon_my@2x.png",
+        "selectedIconPath":"/image/icon_my_selected@2x.png"
+      }
+    ]
   },
   "style": "v2",
   "sitemapLocation": "sitemap.json"
