--- a/project.config.json
+++ b/project.config.json
@@ -53,6 +53,13 @@
 					"id": -1,
 					"name": "pages/home/home",
 					"pathName": "pages/home/home",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/course/course",
+					"pathName": "pages/course/course",
 					"scene": null
 				}
 			]
